--- a/index.html
+++ b/index.html
@@ -9,28 +9,29 @@
 </head>
 <body>
     <div class="container">
-        <input type="text">
-        <div class="button">ce</div>
-        <div class="button">c</div>
-        <div class="button">b</div>
-        <div class="button operator">/</div>
-        <div class="button">7</div>
-        <div class="button">8</div>
-        <div class="button">9</div>
-        <div class="button operator">x</div>
-        <div class="button">4</div>
-        <div class="button">5</div>
-        <div class="button">6</div>
-        <div class="button operator">-</div>
-        <div class="button">1</div>
-        <div class="button">2</div>
-        <div class="button">3</div>
-        <div class="button operator">+</div>
+        <input type="text" value="" id="display">
+        <div class="button" onclick="clearResult()">ce</div>
+        <div class="button" id="clear">c</div>
+        <div class="button" id="backspace">b</div>
+        <div class="button operator" onclick="set('/')">/</div>
+        <div class="button" onclick="set(7)">7</div>
+        <div class="button" onclick="set(8)">8</div>
+        <div class="button" onclick="set(9)">9</div>
+        <div class="button operator" onclick="set('*')">x</div>
+        <div class="button" onclick="set(4)">4</div>
+        <div class="button" onclick="set(5)">5</div>
+        <div class="button" onclick="set(6)">6</div>
+        <div class="button operator" onclick="set('-')">-</div>
+        <div class="button" onclick="set(1)">1</div>
+        <div class="button" onclick="set(2)">2</div>
+        <div class="button" onclick="set(3)">3</div>
+        <div class="button operator" onclick="set('+')">+</div>
         <div class="button operator">+/-</div>
-        <div class="button">0</div>
-        <div class="button">.</div>
-        <div class="button operator">=</div>
+        <div class="button" onclick="set(0)">0</div>
+        <div class="button" onclick="set('.')">.</div>
+        <div class="button operator" onclick="getResult()">=</div>
        
     </div>
 </body>
+<script src="app.js"></script>
 </html>
